cache/cacheservice/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
spec:
  selector:
    app: cache-app
  ports:
    - protocol: TCP
      port: 8000
  type: NodePort
