cache/cacheservice/cache-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cache-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          serviceName: cache-service
          servicePort: 8000
      - path: /
        pathType: Exact
        backend:
          serviceName: cache-service
          servicePort: 1099
